<resources>
    <string name="app_name">IEQ Survey</string>
    <string name="home_type_prompt">Select Home Type</string>
    <string-array name="home_type_options">
        <item></item> <!-- Blank option -->
        <item>Apartment, less than 5 units</item>
        <item>Apartment, more than 5 units</item>
        <item>Single Family House</item>
    </string-array>
    <string name="section8_prompt">Is your home Section 8 Subsidized?</string>
    <string-array name="yes_no_options">
        <item></item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <!-- Oakland Housing Authority -->
    <string name="oakland_housing_prompt">Is your home managed by the Oakland Housing Authority?</string>

    <!-- Number of People -->
    <string name="number_of_people_prompt">Select number of people</string>
    <string-array name="number_of_people_options">
        <item></item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>10+</item>
    </string-array>

    <!-- Square Footage -->
    <string name="square_footage_prompt">Select square footage</string>
    <string-array name="square_footage_options">
        <item></item>
        <item>Less than 500 square feet</item>
        <item>500-1000 sq ft</item>
        <item>1000-2000 sq ft</item>
        <item>More than 2000 sq ft</item>
    </string-array>

    <!-- Date -->
    <string name="date_prompt">Enter date (mm/dd/yyyy)</string>

    <!-- Nearby Street Intersection -->
    <string name="street_intersection_prompt">Enter nearby street intersection (two streets)</string>
    <string name="city_prompt">City</string>
    <!-- Age of Building -->
    <string name="building_age_prompt">Enter age of building if you dont know leave blank</string>

    <!-- New strings for HVAC -->
    <string name="yes_no_prompt">Select Yes or No</string>
    <string-array name="air_conditioning_type_options">
        <item></item>
        <item>Central (blows out vents in wall or ceiling)</item>
        <item>Mini-Split</item>
    </string-array>
    <string-array name="heating_type_options">
        <item></item>
        <item>No heat</item>
        <item>Gravity Heater on wall, baseboard, or in the floor. Gets hot but does not blow air</item>
        <item>Central Heat with filter warm air blows out vents in wall or ceiling and has a filter to clean the air</item>
        <item>Central heat WITHOUT Filter Warm air blows out vents in wall or ceiling and does not have a filter to clean the air</item>
        <item>Radiator Steam through pipes</item>
    </string-array>
    <string name="air_conditioning_type_prompt">Select Air Conditioning Type</string>
    <string name="heating_type_prompt">Select Heating Type</string>
    <string name="appliances_prompt">Enter appliances</string>

    <!-- New strings for IAQ -->
    <string name="kitchen_stove_type_prompt">Select Kitchen Stove Type</string>
    <string-array name="kitchen_stove_type_options">
        <item></item>
        <item>Electric Stove</item>
        <item>Gas</item>
        <item>Induction</item>
        <item>No Stove</item>
    </string-array>
    <!-- Options for Bathroom Ventilation -->
    <string-array name="bathroom_ventilation_options">
        <item> </item>
        <item>Exhaust Fan</item>
        <item>No Exhaust Fan</item>
    </string-array>
    <string name="kitchen_stove_fan_prompt">Select Kitchen Stove Fan</string>
    <string-array name="kitchen_stove_fan_options">
        <item></item>
        <item>Circulating Fan Blows back into the room</item>
        <item>Exhaust Fan that blows to the outdoors</item>
    </string-array>
    <string name="bathroom_ventilation_prompt">Select Bathroom Ventilation</string>

    <string name="mold_present_prompt">Is there mold present anywhere in the dwelling?</string>

    <!-- Prompts for EditTexts -->
    <string name="living_room_before_cooking_prompt">Enter PM 2.5 Reading Before Cooking</string>
    <string name="living_room_after_cooking_prompt">Enter PM 2.5 Reading After Cooking</string>
    <string name="living_room_humidity_prompt">Enter Living Room Relative Humidity</string>
    <string name="outdoor_pm25_prompt">Enter Outdoor PM 2.5 Reading</string>
    <string name="outdoor_humidity_prompt">Enter Outdoor Relative Humidity</string>


    <!-- Prompts for Second Survey -->
    <string name="building_type_prompt">Select Building Type</string>
    <string name="type_of_room_prompt">Select Room Type</string>
    <string name="square_footage_prompt2">Select Square Footage Estimate</string>
    <string name="gps_location_prompt">Enter GPS Coordinates or Address</string>
    <string name="age_of_building_prompt">Enter Age of Building</string>
<!--    <string name="date_prompt">Enter Date (mm/dd/yyyy)</string>-->
    <string name="time_of_day_prompt">Enter Time of Day (AM/PM)</string>
    <string name="season_prompt">Select Season</string>
    <!-- Spinner Arrays -->
    <string-array name="building_type_options">
        <item> </item>
        <item>School Building</item>
        <item>Recreation Center</item>
        <item>Library</item>
        <item>Community Organization</item>
        <item>Medical Clinic</item>
        <item>Other</item>
    </string-array>

    <string-array name="type_of_room_options">
        <item> </item>
        <item>Classroom</item>
        <item>Lobby</item>
        <item>Auditorium</item>
        <item>Cafeteria</item>
        <item>Library</item>
        <item>Bathroom</item>
        <item>Science Laboratory</item>
        <item>Counseling Office</item>
        <item>School Office</item>
        <item>Kitchen</item>
        <item>Other</item>
    </string-array>


    <string-array name="season_options">
        <item> </item>
        <item>Spring/Summer (May - September)</item>
        <item>Fall/Winter (October - April)</item>
    </string-array>



    <string-array name="yes_no_array">
        <item> </item>
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="air_conditioning_type_array">
        <item> </item>
        <item>Central (blows out vents in wall or ceiling)</item>
        <item>Mini-Split</item>
    </string-array>

    <string-array name="heating_type_array">
        <item> </item>
        <item>No Heat</item>
        <item>Gravity Heater on wall, baseboard, or in the floor. Gets hot but does not blow air</item>
        <item>Central Heat with Filter Warm air blows out vents in wall or ceiling and has a filter to clean the air</item>
        <item>Central Heat WITHOUT Filter Warm air blows out vents in wall or ceiling and does not have a filter to clean the air</item>
        <item>Radiator Steam heat through pipes</item>
    </string-array>




    <!-- IAQ Section -->
    <string name="kitchen_prompt">Is there a kitchen?</string>

    <string-array name="kitchen_stove_type_array">
        <item></item>
        <item>Electric</item>
        <item>Gas</item>
        <item>Induction</item>
        <item>No stove</item>
    </string-array>

    <string-array name="kitchen_stove_fan_array">
        <item></item>
        <item>Circulating Fan Blows back into the room</item>
        <item>Exhaust Fan that blows to the outdoors</item>
    </string-array>

    <string name="bathroom_prompt">Is there a bathroom?</string>

    <string-array name="bathroom_ventilation_array">
        <item></item>
        <item>No Exhaust Fan</item>
        <item>Exhaust Fan</item>
    </string-array>

    <string name="indoor_pm25_prompt">Enter Indoor PM 2.5 Reading</string>

    <string name="indoor_humidity_prompt">Enter Indoor Humidity</string>

    <string name="mold_prompt">Is mold present?</string>
    <string name="info_icon_desc">test\n</string>

    <!-- Yes/No Options -->



    <string-array name="bathroom_ventilation_type_array">
        <item>No Exhaust Fan</item>
        <item>Exhaust Fan</item>
    </string-array>

</resources>
